resizing info texts, fixed navbar overlapping

--- a/src/styles/_opticianprofile.scss
+++ b/src/styles/_opticianprofile.scss
@@ -3,6 +3,12 @@ $widthStore: calc(100% - $widthInfo);
 $heightInfoImg: 45%;
 $heightInfoTexts: calc((100% - $heightInfoImg) / 3);
 
+.profile-component-container {
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
+}
+
 .please-connect {
   padding-top: 25%;
   padding-left: 30%;
@@ -12,11 +18,11 @@ $heightInfoTexts: calc((100% - $heightInfoImg) / 3);
 
 .optician-profile {
   display: flex;
-  height: 70vh;
-  width: 80vw;
-  margin: auto;
+  width: 100%;
+  height: 80vh;
+  position: relative;
   box-shadow: rgb(200, 203, 209) 5px 5px 20px;
-  padding-top: 100px;
+  top: 3vh;
 
   &__info {
     display: flex;
@@ -47,6 +53,7 @@ $heightInfoTexts: calc((100% - $heightInfoImg) / 3);
     align-items: center;
     height: $heightInfoTexts;
     p {
+      font-size: 1.3em;
       margin-left: 5%;
       line-height: 1.8rem;
     }
